My order history

--- a/src/pages/orders_in_work.html
+++ b/src/pages/orders_in_work.html
@@ -142,6 +142,126 @@
 
         </div>
 
+        <br>
+
+        <div class="my-order my-order--product">
+          <form action="#">
+            <div class="my-order__wrapper my-order__bb">
+              <div class="my-order__product-status my-order__flex-wrap">
+                <h3 class="my-order__heading my-order__product-heading">Товар №1</h3>
+                <a href="#">Удалить из корзины</a>
+                <span class="my-order__status-state my-order__status-state--grey">Ожидает выкупа</span>
+              </div>
+
+              <div class="my-order__field my-order__col-1-1">
+                <label class="order-form__label" for="product-url">Ссылка на товар</label>
+                <input class="order-form__input" type="url" id="product-url" placeholder="Например: http://amazom.com/phone/iphone12" value="https://www.amazon.com/gp/product/P6...RT50BRZ&pf_rd_p=9d9090dd-8b99-4ac3-b4a9-90a1db2ef53b">
+              </div>
+              <div class="my-order__field my-order__col-1-1">
+                <label class="order-form__label" for="product-title">Название товара на сайте</label>
+                <input class="order-form__input" type="text" id="product-title" placeholder="Например: Iphone 12 pro 256 gold" value="DC-BEAUTIFUL 6 Set Girl Dolls Clothes ...Hat Socks, Total 14 Pcs Doll Onesies Clothes Pajamas Costumes">
+              </div>
+              <div class="my-order__field-group my-order__field-group--params">
+                <div class="my-order__field my-order__col-1-4">
+                  <label class="order-form__label" for="product-price">Цена</label>
+                  <input class="order-form__input" type="text" id="product-price" placeholder="Например: $1234.33" value="25.99">
+                </div>
+                <div class="my-order__field my-order__col-1-4">
+                  <label class="order-form__label" for="product-color">Цвет (colour)</label>
+                  <input class="order-form__input" type="text" id="product-color" placeholder="Например: green" value="Rayas Azul Marino">
+                </div>
+                <div class="my-order__field my-order__col-1-4">
+                  <label class="order-form__label" for="product-size">Размер (size)</label>
+                  <input class="order-form__input" type="text" id="product-size" placeholder="Например: 7 M / 9,5 W" value="s/m">
+                </div>
+                <div class="my-order__field my-order__col-1-4">
+                  <label class="order-form__label" for="product-quantity">Количество</label>
+                  <input class="order-form__input" type="text" id="product-quantity" placeholder="Например: 1" value="2">
+                </div>
+              </div>
+            </div>
+            <div class="my-order__wrapper">
+              <label class="order-form__label" for="order-comment">Коментарии или промокод сайта:</label>
+              <textarea class="order-form__input order-form__textarea" name="order-comment" id="order-comment">примените промокод 40estra  без него не выкупайте товар</textarea>
+            </div>
+          </form>
+
+        </div>
+
+        <br>
+
+        <div class="my-order my-order--product">
+          <form action="#">
+            <div class="my-order__wrapper my-order__bb">
+              <div class="my-order__product-status my-order__flex-wrap">
+                <h3 class="my-order__heading my-order__product-heading">Товар №2</h3>
+                <a href="#">Удалить из корзины</a>
+                <span class="my-order__status-state my-order__status-state--grey">Ожидает выкупа</span>
+              </div>
+
+              <div class="my-order__field my-order__col-1-1">
+                <label class="order-form__label" for="product-url">Ссылка на товар</label>
+                <input class="order-form__input" type="url" id="product-url" placeholder="Например: http://amazom.com/phone/iphone12" value="https://www.amazon.com/gp/product/P6...RT50BRZ&pf_rd_p=9d9090dd-8b99-4ac3-b4a9-90a1db2ef53b">
+              </div>
+              <div class="my-order__field my-order__col-1-1">
+                <label class="order-form__label" for="product-title">Название товара на сайте</label>
+                <input class="order-form__input" type="text" id="product-title" placeholder="Например: Iphone 12 pro 256 gold" value="DC-BEAUTIFUL 6 Set Girl Dolls Clothes ...Hat Socks, Total 14 Pcs Doll Onesies Clothes Pajamas Costumes">
+              </div>
+              <div class="my-order__field-group my-order__field-group--params">
+                <div class="my-order__field my-order__col-1-4">
+                  <label class="order-form__label" for="product-price">Цена</label>
+                  <input class="order-form__input" type="text" id="product-price" placeholder="Например: $1234.33" value="25.99">
+                </div>
+                <div class="my-order__field my-order__col-1-4">
+                  <label class="order-form__label" for="product-color">Цвет (colour)</label>
+                  <input class="order-form__input" type="text" id="product-color" placeholder="Например: green" value="Rayas Azul Marino">
+                </div>
+                <div class="my-order__field my-order__col-1-4">
+                  <label class="order-form__label" for="product-size">Размер (size)</label>
+                  <input class="order-form__input" type="text" id="product-size" placeholder="Например: 7 M / 9,5 W" value="s/m">
+                </div>
+                <div class="my-order__field my-order__col-1-4">
+                  <label class="order-form__label" for="product-quantity">Количество</label>
+                  <input class="order-form__input" type="text" id="product-quantity" placeholder="Например: 1" value="2">
+                </div>
+              </div>
+            </div>
+            <div class="my-order__wrapper my-order__bb">
+              <label class="order-form__label" for="order-comment">Коментарии или промокод сайта:</label>
+              <textarea class="order-form__input order-form__textarea" name="order-comment" id="order-comment">примените промокод 40estra  без него не выкупайте товар</textarea>
+            </div>
+
+            <div class="my-order__wrapper my-order__bb">
+              <p class="my-order__heading-2">Что делать если такого товара не будет в магазине:</p>
+              <div class="my-order__flex-wrap my-order__flex-wrap--cg-40">
+                <label class="my-order__checkbox">
+                  <input type="checkbox">
+                  <span class="my-order__checkbox-icon"></span>
+                  Купить те товары, которые будут
+                </label>
+                <label class="my-order__checkbox">
+                  <input type="checkbox">
+                  <span class="my-order__checkbox-icon"></span>
+                  Отменить весь заказ
+                </label>
+              </div>
+            </div>
+
+            <div class="my-order__wrapper">
+              <label class="my-order__checkbox my-order__agreement">
+                <input type="checkbox">
+                <span class="my-order__checkbox-icon"></span>
+                Если промокод на сайте выкупа не cработает, я соглашаюсь с выкупом заказа без скидки.
+              </label>
+              <div class="my-order__flex-wrap">
+                <a href="#" class="my-order__button">Оформить заказ и оплатить</a>
+                <a href="#" class="my-order__button my-order__button--white">Редактирование заказа</a>
+              </div>
+            </div>
+          </form>
+
+        </div>
+
       </div>
     </div>
 
