--- a/src/pages/orders_create.html
+++ b/src/pages/orders_create.html
@@ -167,6 +167,40 @@
             </div>
           </div>
         </div>
+
+        <br>
+
+        <div class="my-order my-order__card">
+          <div class="my-order__wrapper my-order__bb my-order__bb--card">
+            <div class="my-order__card-heading">
+              <img src="">
+              <div></div>
+              <div></div>
+            </div>
+          </div>
+          <div class="my-order__wrapper my-order__bb my-order__bb--card">
+            <div class="my-order__card-desc-wrapper">
+              <div class="my-order__card-item-desc">Colorblocked striped sweateк  striped sweateк stripedped sweateк</div>
+              <a href="#">amaxon.com</a>
+            </div>
+              <ul class="my-order__card-item-desc">
+                <li>Размер: XL</li>
+                <li>Цвет: Pear Gear Combo</li>
+                <li>Цена: $46.00</li>
+              </ul>
+          </div>
+          <div class="my-order__wrapper my-order__storage-period my-order__bb my-order__bb--card">
+            <div class="my-order__card-item-name">Срок хранения:</div>
+            <div class="my-order__card-storage-date">28 ноября 2020 г</div>
+          </div>
+          <div class="my-order__wrapper">
+            <form class="my-order__comment order-form" action="#">
+              <label class="order-form__label" for="order-comment">Комментарий</label>
+              <textarea class="order-form__input order-form__textarea" name="order-comment" id="order-comment">Джинсы Levis 514 -34x29 - KIR</textarea>
+            </form>
+          </div>
+
+        </div>
       </div>
     </div>
 
