--- a/src/pages/buyer.html
+++ b/src/pages/buyer.html
@@ -21,7 +21,7 @@
                 </li>
               </ul>
               <h2 class="heading-primary product-order__heading">
-                Профессиональные <span class="blue">БАЙЕРЫ</span> от Простобокса
+                Профессиональные <span class="blue">байеры</span> от Простобокса
               </h2>
               <p class="product-order__text">
                 Просто отправьте ссылку на интересующий товар, наши штатные байеры&nbsp;все купят и отправят на наш склад в Делавэре.
@@ -46,7 +46,40 @@
       </div>
     </section>
 
-    
+    <section class="help-buyer">
+      <div class="container">
+        <h2 class="heading-primary help-buyer__heading">Когда может понадобиться помощь штатного <span class="blue">байера</span>:</h2>
+        <ul class="help-buyer__list">
+          <li class="help-buyer__item help-buyer__item--by-yourself">
+            <p class="help-buyer__text">
+              Если вы
+            </p>
+            <p class="help-buyer__text-bold">
+              не хотите самостоятельно покупать
+            </p>
+            <p class="help-buyer__text">
+              в американских магазинах
+            </p>
+          </li>
+          <li class="help-buyer__item help-buyer__item--impossible">
+            <p class="help-buyer__text">
+              Если вы хотите заказать товар из&nbsp;магазина, где
+            </p>
+            <p class="help-buyer__text-bold">
+              невозможно купить не имея американской кредитки
+            </p>
+          </li>
+          <li class="help-buyer__item help-buyer__item--delivery">
+            <p class="help-buyer__text">
+              Если американский магазин
+            </p>
+            <p class="help-buyer__text-bold">
+              не доставляет товары на адреса посредников
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
 
   </main>
 {% endblock %}
