--- a/src/pages/buyer.html
+++ b/src/pages/buyer.html
@@ -81,5 +81,40 @@
       </div>
     </section>
 
+    <section class="purchase-help section">
+
+      <div class="section-xxl purchase-help__section">
+        <div class="purchase-help__wrapper">
+          <div class="container">
+            <div class="purchase-help__content-wrapper">
+              <div class="purchase-help__content">
+                <h2 class="heading-secondary purchase-help__heading">
+                  Наши байеры <span class="blue">помогут</span> вам с&nbsp;<span class="blue">покупками в США</span>.
+                </h2>
+                <p class="purchase-help__text">
+                  У них есть и карты, и специальные дополнительные адреса, для того, чтобы покупать товары даже в тех магазинах, которые не доставляют на адреса посредников, например Ralph Lauren, Levi's, Coach.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="sending-link purchase-help__sending">
+          <p class="sending-link__heading heading-secondary">
+            Отправить ссылку на товар байерам Простобокса:
+          </p>
+          <div class="sending-link__from-wrapper">
+            <form class="sending-link__form" action="">
+              <input class="sending-link__input" type="text" placeholder="Ссылка на товар">
+              <button class="sending-link__button" type="submit"></button>
+            </form>
+            <p class="sending-link__text">Нажимая на кнопку вы подтверждаете согласие с правилами предоставления услуги и политикой конфиденциальности</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 {% endblock %}
