--- a/src/pages/buyer.html
+++ b/src/pages/buyer.html
@@ -116,5 +116,38 @@
       </div>
     </section>
 
+    <section class="how-issue">
+      <div class="container">
+        <h2 class="heading-primary how-issue__heading">Как оформить заказ через <span class="blue">байера</span>&nbsp;Простобокса?</h2>
+        <ul>
+          <li class="how-issue__item how-issue__item--choice">
+            <div class="how-issue__item-wrapper--choice">
+              <p class="heading-tertiary how-issue__tertiary">Выбираете товар</p>
+              <p class="how-issue__text">в американском магазине и присылаете ссылку&nbsp;на него байерам Простобокса.</p>
+              <p class="how-issue__text">Кроме ссылки важно указать название товара, размер и другую информацию, чтобы у байера не было вопросов во время оформления заказа в магазине.</p>
+            </div>
+          </li>
+          <li class="how-issue__item how-issue__item--redemption">
+            <div class="how-issue__item-wrapper--redemption">
+              <p class="heading-tertiary how-issue__tertiary">Байер принимает заказ и&nbsp;выкупает товары</p>
+              <p class="how-issue__text">Пользуясь американской кредиткой и при необходимости дополнительными американскими адресами, если магазин не доставляет на адреса посредников.</p>
+            </div>
+          </li>
+          <li class="how-issue__item how-issue__item--shipment">
+            <div class="how-issue__item-wrapper--shipment">
+              <p class="heading-tertiary how-issue__tertiary">Отправляют заказ</p>
+              <p class="how-issue__text">Через несколько дней после оформления и он поступает на склад Простобокса</p>
+            </div>
+          </li>
+          <li class="how-issue__item how-issue__item--pay">
+            <div class="how-issue__item-wrapper--pay">
+              <p class="heading-tertiary how-issue__tertiary">Вы оплачиваете доставку и&nbsp;посылка летит к вам</p>
+              <p class="how-issue__text">Байер может заполнить за вас декларацию, а если посылка превышает порог таможенной пошлины – оплатить пошлину можно вместе с оплатой доставки Простобоксом.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
   </main>
 {% endblock %}
