--- a/src/pages/buyer.html
+++ b/src/pages/buyer.html
@@ -67,7 +67,7 @@
 
     <section class="help-buyer">
       <div class="container">
-        <h2 class="heading-primary help-buyer__heading">Когда может понадобиться помощь штатного <span class="blue">байера</span>:</h2>
+        <h1 class="heading-primary help-buyer__heading">Когда может понадобиться помощь штатного <span class="blue">байера</span>:</h1>
         <ul class="help-buyer__list">
           <li class="help-buyer__item help-buyer__item--by-yourself">
             <p class="help-buyer__text">
@@ -107,9 +107,9 @@
           <div class="container">
             <div class="purchase-help__content-wrapper">
               <div class="purchase-help__content">
-                <h2 class="heading-secondary purchase-help__heading">
+                <h1 class="heading-secondary purchase-help__heading">
                   Наши байеры <span class="blue">помогут</span> вам с&nbsp;<span class="blue">покупками в США</span>.
-                </h2>
+                </h1>
                 <p class="purchase-help__text">
                   У них есть и карты, и специальные дополнительные адреса, для того, чтобы покупать товары даже в тех магазинах, которые не доставляют на адреса посредников, например Ralph Lauren, Levi's, Coach.
                 </p>
@@ -137,7 +137,7 @@
 
     <section class="how-issue">
       <div class="container how-issue__container">
-        <h2 class="heading-primary how-issue__heading">Как оформить заказ через <span class="blue">байера</span>&nbsp;Простобокса?</h2>
+        <h1 class="heading-primary how-issue__heading">Как оформить заказ через <span class="blue">байера</span>&nbsp;Простобокса?</h1>
         <ul>
           <li class="how-issue__item how-issue__item--choice">
             <div class="how-issue__item-wrapper--choice">
@@ -168,6 +168,66 @@
       </div>
       <div class="container">
         <div class="sending-link">
+          <p class="sending-link__heading heading-secondary">
+            Отправить ссылку на товар байерам Простобокса:
+          </p>
+          <div class="sending-link__from-wrapper">
+            <form class="sending-link__form" action="">
+              <input class="sending-link__input" type="text" placeholder="Ссылка на товар">
+              <button class="sending-link__button" type="submit"></button>
+            </form>
+            <p class="sending-link__text">Нажимая на кнопку вы подтверждаете согласие с правилами предоставления услуги и политикой конфиденциальности</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="advantage-bayres">
+      <div class="section-xxl">
+        <div class="advantage-bayres__wrapper">
+          <div class="container">
+            <h1 class="heading-primary advantage-bayres__heading">Почему мы <span class="blue">рекомендуем</span> покупать через <span class="blue">байеров</span> Простобокса?</h1>
+            <ul class="advantage-bayres__list">
+              <li class="advantage-bayres__item advantage-bayres__item--course">
+                <p class="advantage-bayres__text">Байеры Простобокса прошли специальный курс обучения и разбираются
+                  в&nbsp;американском шопинге лучше любого стороннего байера.</p>
+              </li>
+              <li class="advantage-bayres__item advantage-bayres__item--quality">
+                <p class="advantage-bayres__text">Простобокс отвечает за качество работы байера и&nbsp;берем возможные его ошибки на себя.</p>
+              </li>
+              <li class="advantage-bayres__item advantage-bayres__item--account">
+                <p class="advantage-bayres__text">Во избежании ошибок и&nbsp;накладок работа с&nbsp;байером ведется только через личный кабинет Простобокса.</p>
+              </li>
+              <li class="advantage-bayres__item advantage-bayres__item--watch">
+                <p class="advantage-bayres__text">Байеров несколько и они выкупают заказы 24/7, это важно на распродажах.</p>
+              </li>
+              <li class="advantage-bayres__item advantage-bayres__item--language">
+                <p class="advantage-bayres__text">Байеры владеют английским языком и могут переписываться и&nbsp;созваниваться с&nbsp;магазинами.</p>
+              </li>
+              <li class="advantage-bayres__item advantage-bayres__item--terminal">
+                <p class="advantage-bayres__text">Байеры выкупают товары, используя американские кредитные карты.</p>
+              </li>
+              <li class="advantage-bayres__item advantage-bayres__item--compass">
+                <p class="advantage-bayres__text">В распоряжении байеров несколько дополнительных американских адресов для заказа из капризных магазинов.</p>
+              </li>
+              <li class="advantage-bayres__item advantage-bayres__item--percent">
+                <p class="advantage-bayres__text">Байеры знают о скидках в&nbsp;магазинах и применяют их&nbsp;к заказам.</p>
+              </li>
+              <li class="advantage-bayres__item advantage-bayres__item--ebay">
+                <p class="advantage-bayres__text">Байеры умеют покупать на&nbsp;аукционах eBay.</p>
+              </li>
+              <li class="advantage-bayres__item advantage-bayres__item--box">
+                <p class="advantage-bayres__text">Байеры проверяют ваши товары, когда они уже на&nbsp;складе. Чтобы вы получили то, что хотели!</p>
+              </li>
+              <li class="advantage-bayres__item advantage-bayres__item--sheet">
+                <p class="advantage-bayres__text">Байеры могут заполнить за&nbsp;вас декларацию. Услуга&nbsp;платная и стоит $5.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="sending-link advantage-bayres__sending">
           <p class="sending-link__heading heading-secondary">
             Отправить ссылку на товар байерам Простобокса:
           </p>
