--- a/src/pages/buyer.html
+++ b/src/pages/buyer.html
@@ -135,7 +135,7 @@
       </div>
     </section>
 
-    <section class="how-issue">
+    <section class="how-issue section">
       <div class="container how-issue__container">
         <h1 class="heading-primary how-issue__heading">Как оформить заказ через <span class="blue">байера</span>&nbsp;Простобокса?</h1>
         <ul>
@@ -182,7 +182,7 @@
       </div>
     </section>
 
-    <section class="advantage-bayres">
+    <section class="advantage-bayres section">
       <div class="section-xxl">
         <div class="advantage-bayres__wrapper">
           <div class="container">
@@ -228,6 +228,43 @@
       </div>
       <div class="container">
         <div class="sending-link advantage-bayres__sending">
+          <p class="sending-link__heading heading-secondary">
+            Отправить ссылку на товар байерам Простобокса:
+          </p>
+          <div class="sending-link__from-wrapper">
+            <form class="sending-link__form" action="">
+              <input class="sending-link__input" type="text" placeholder="Ссылка на товар">
+              <button class="sending-link__button" type="submit"></button>
+            </form>
+            <p class="sending-link__text">Нажимая на кнопку вы подтверждаете согласие с правилами предоставления услуги и политикой конфиденциальности</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="cost-bayres section">
+      <div class="container cost-bayres__container">
+        <h1 class="heading-primary cost-bayres__heading">Сколько стоят услуги <span class="blue">байеров</span> Простобокса?</h1>
+        <ul>
+          <li class="cost-bayres__item cost-bayres__item--firecracker">
+            <p class="heading-tertiary cost-bayres__tertiary">Бесплатно с&nbsp;промокодом</p>
+            <p class="blue cost-bayres__text-percent">$0</p>
+            <p class="cost-bayres__text">Ищите промокод на бесплатный выкуп&nbsp;в&nbsp;наших&nbsp;соцсетях. Новые магазины&nbsp;появляются постоянно!</p>
+          </li>
+          <li class="cost-bayres__item cost-bayres__item--rocket">
+            <p class="heading-tertiary cost-bayres__tertiary">Тариф стандарт</p>
+            <p class="blue cost-bayres__text-percent">10% от стоимости заказа но&nbsp;не&nbsp;менее $10</p>
+            <p class="cost-bayres__text">Для большинства магазинов, исключая магазины&nbsp;из&nbsp;черного списка, если у вас нет актуального промо-кода</p>
+          </li>
+          <li class="cost-bayres__item cost-bayres__item--crown">
+            <p class="heading-tertiary cost-bayres__tertiary cost-bayres__tertiary--vip">Тариф VIP</p>
+            <p class="blue cost-bayres__text-percent">15% от стоимости заказа но&nbsp;не&nbsp;менее $15</p>
+            <p class="cost-bayres__text">Для магазинов со сложной системой выкупа, которые обычно не доставляют на адреса посредников. Промокоды не действуют.</p>
+          </li>
+        </ul>
+      </div>
+      <div class="container">
+        <div class="sending-link">
           <p class="sending-link__heading heading-secondary">
             Отправить ссылку на товар байерам Простобокса:
           </p>
